Fix page alignment issue

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); */
 @font-face {
     font-family: 'Norse';
     src: url(./Norse-Bold.otf);
@@ -13,7 +12,6 @@
 :root {
     font-family: 'Press Start 2P', Arial, Helvetica, sans-serif;
     --btn-colour: #685595;
-    /* --font-colour: hsl(0, 0%, 96.5%); */
     --font-colour: black;}
 
 #main-container {
@@ -36,7 +34,6 @@
     justify-content: space-between;
     align-items: center;
     color: white;
-    /* padding-bottom: 8px; */
 }
 
 .background-credit, a, a:visited {
@@ -86,7 +83,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    margin: 150px 50px 60px;
+    margin: 100px 50px 60px;
 }
 
 #sign-up-form {
